--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,6 @@
   tags: [deploy]
 
 - name: Restart supervisor task
-  supervisorctl: name={{ riverrun_app_name }} state=restarted
+  supervisorctl: name={{ planet_app_name }} state=restarted
   when: server_mode != "development"
   tags: [deploy]
