--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,3 +3,4 @@ galaxy_info:
   author: Shawn Xie
   description: an Ansible role of a site based on Python, Nginx, Supervisor, Redis and Postgresql.
   license: MIT
+  dependencies: []
